<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common -->
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity -->
    <string name="app_name">Various Activities</string>
    <string name="hello_world">Hello world!</string>
    <string name="mirror_text">MirrorText</string>
    <string name="form">Form</string>
    <string name="users">Users</string>
    <string name="contacts">Contacts</string>

    <!-- MirrorTextActivity -->
    <string name="title_activity_mirror_text">MirrorText</string>
    <string name="enterText">Please enter a text</string>

    <!-- FormActivity -->
    <string name="title_activity_form">Form</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="chk_ios">ios</string>
    <string name="chk_android">android</string>

    <!-- UsersActivity -->
    <string name="title_activity_users">Users</string>

    <!-- UserDetailActivity -->
    <string name="title_activity_user_detail">User Detail</string>

    <!-- ContactsActivity -->
    <string name="title_activity_contacts">Contacts</string>

</resources>