<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.formation.activities.MainActivity" >

    <TextView
        android:id="@+id/label_helloWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button_mirrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mirror_text" />

    <Button
        android:id="@+id/button_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form" />

    <Button
        android:id="@+id/button_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users" />

    <Button
        android:id="@+id/button_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts" />

</LinearLayout>